# silent-abyss

./: .gitignore  AGENTS.md  CLAUDE.md  IMPROVEMENT_PLAN.md  README.md  audio-system.js  eslint.config.js  index.html  main.js  package-lock.json  package.json  progress.md  scrolling-display.js  simulation.js  sonar-visuals.js  style.css  tactical-renderer-2d.js  tactical-renderer-3d.js  tactical-view.js  vite.config.js  world-model.js
assets/: dsp_core_bg-3wBohmh6.wasm  dsp_core_bg-CjIFVk_5.wasm  dsp_core_bg-xjDhM_Au.wasm  index-BP1zVe8_.js  index-BSv4t98Z.js  index-BYqu13j7.js  index-BbNEuSGc.js  index-BhK1z_lX.js  index-BtScg5PW.js  index-BuF2FvYx.css  index-BvY1PvwQ.js  index-C3oIYq4p.css  index-C7Lp8YiK.js  index-CMr89q2l.js  index-CR4eokg8.js  index-CTTqIUIc.js  index-CcZDnann.css  index-CiBanRiB.css  index-CiLAXtQN.js  index-Cnr8FkGl.js  index-CwsrQbaC.js  index-D6pjt2MH.js  index-D9vYqF5R.js  index-DAN01Iib.js  index-DCstC1aj.js  index-DSYIMgUB.js  index-DilUb-al.js  index-Dx2Jdo6w.js  index-Dz2O2Vr_.js  index-FIs-exHu.js  index-UBEatf5T.js  index-WRBaBWSU.js  index-jQrwoXwX.css  index-pqMXU9DZ.js  index-yGTwV1dh.css  three.webgpu-1JSJGxPf.js  three.webgpu-Aek_pR1N.js  three.webgpu-B6fsAWUJ.js  three.webgpu-BD4fAYH2.js  three.webgpu-BQizAw1J.js  (+22 more)
documents/: 2D_VISUAL_ENHANCEMENT_PLAN.md  2d-terrain-profiling-notes-2026-02-24.md  BIO_SOUND_SYNTHESIS_PLAN.md  DEMON_SYNTH_UPGRADE_PLAN.md  DEMON_WASM_FIX_AND_IMPLEMENTATION_PLAN.md  (+7 more)
src/audio/dsp-core/: Cargo.toml
src/audio/dsp-core/pkg/: dsp_core.js  dsp_core_bg.wasm
src/audio/dsp-core/src/: lib.rs
(+55 files in other folders)
